@@ -3,9 +3,7 @@ use strict;
 use warnings;
 use Test::More;
 
-eval 'use Test::Spelling 0.11';
-plan skip_all => 'Test::Spelling 0.11 not installed' if $@;
-plan skip_all => 'set TEST_SPELLING to enable this test' unless $ENV{TEST_SPELLING};
+use Test::Spelling 0.11;
 
 set_spell_cmd('aspell list');
 
@@ -14,6 +12,7 @@ add_stopwords( grep { defined $_ && length $_ } <DATA>);
 all_pod_files_spelling_ok();
 
 __DATA__
+dhoss
 behaviour
 Doran
 Kiefer
